# C-Bank

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2024-08-23_initial.py
src/: config.py  logger.py  main.py
src/backend/: gunicorn.py
src/backend/app/: crud.py  logger.py  main.py
src/backend/app/database/: README.md  database.py
src/backend/app/models/: __init__.py  account.py  savings_account.py  transaction.py  user.py
src/backend/app/routes/: __init__.py  account.py  transaction.py  user.py
src/backend/app/schemas/: __init__.py  account.py  savings_account.py  transaction.py  user.py
src/pages/: router.py
src/static/css/: styles.css
src/static/js/: script.js
src/templates/pages/: about.html  error.html  index.html  news.html
